--- a/k8s/api.yaml
+++ b/k8s/api.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 
 kind: Deployment
 metadata:
-  name: api-temperatura
+  name: api-deployment
 spec:
   selector:
     matchLabels:
@@ -13,7 +13,7 @@ spec:
         app: api
     spec:
       containers:
-      - name: api-temperatura
+      - name: api
         image: ellisonalencar/conversao-temperatura:1.1
         resources:
           limits:
