--- a/k8s/service.yaml
+++ b/k8s/service.yaml
@@ -5,7 +5,8 @@ metadata:
 spec:
   selector:
     app: api
+  type: LoadBalancer
   ports:
-  - port: 8080
+  - port: 8000
     targetPort: 8080
-  type: NodePort
+    nodePort: 30000
